# Hyaline

./: .gitignore  LICENSE  README.md  Supplementary_Data_1.csv  pyproject.toml  requirements.txt
hyaline/: __init__.py  cli.py  data.py  graph_data.py  model_v2.py  motifs.py  predict.py  sota_enhancements.py
scripts/: generate_figures.py  generate_pymol.py  predict.py  temporal_validation.py  train.py
