[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyaline"
version = "2.0.0"
description = "Geometric Deep Learning for GPCR Activation State Prediction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Varosync"}
]
keywords = ["GPCR", "deep-learning", "graph-neural-network", "protein-structure", "drug-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "h5py>=3.8.0",
    "tqdm>=4.65.0",
    "biopython>=1.81",
]

[project.optional-dependencies]
esm = ["esm>=3.0.0"]
viz = ["matplotlib>=3.7.0", "seaborn>=0.13.0"]
all = ["esm>=3.0.0", "matplotlib>=3.7.0", "seaborn>=0.13.0", "scikit-learn>=1.2.0"]

[project.scripts]
hyaline = "hyaline.cli:main"

[project.urls]
Homepage = "https://github.com/Varosync/Hyaline"
Repository = "https://github.com/Varosync/Hyaline"

[tool.setuptools.packages.find]
include = ["hyaline*"]
